--- a/styles/main.css
+++ b/styles/main.css
@@ -51,4 +51,14 @@ html {
      margin: 0 auto;
      max-width: 64rem;
  }
+
+.clearfix::before,
+.clearfix::after {
+   content: " ";
+   display: table;
+}
+
+.clearfix::after {
+   clear: both;
+}
  
