--- a/styles/main.css
+++ b/styles/main.css
@@ -18,9 +18,9 @@ html {
  .navbar {
      position: relative;
      padding: 0.5rem;
-     background-color: rgba(101,18,95,0.5); }
+     background-color: rgba(101,18,95,0.5); 
      z-index: 1;
- 
+}
  .navbar .logo {
      position: relative; 
      left: 2rem;
