--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,10 @@ html {
      max-width: 64rem;
  }
 
+ .container.narrow {
+     max-width: 56rem;
+ }
+
 .clearfix::before,
 .clearfix::after {
    content: " ";
