--- a/styles/landing.css
+++ b/styles/landing.css
@@ -14,9 +14,9 @@
 .hero-content .hero-title {
      position: absolute;             
      top: 40%;                      
-     -webkit-transform: translateY(-50%);
-     -moz-transform: translateY(-50%);
-     -ms-transform: translateY(-50%);
+     transform: translateY(-50%);
+     transform: translateY(-50%);
+     transform: translateY(-50%);
      transform: translateY(-50%);
      width: 100%;                   
      text-align: center;            
@@ -24,7 +24,7 @@
      font-weight: 300;               
      text-transform: uppercase;      
      letter-spacing: 0.5rem;         
-     text-shadow: 1px 1px 0px rgb(58,23,63); 
+     text-shadow: 1px 1px 0 rgb(58,23,63); 
  }
 
 .selling-points {
@@ -46,3 +46,4 @@
  .ion-iphone {
      color: rgb(233,50,117);
      font-size: 5rem;
+}
