--- a/styles/album.css
+++ b/styles/album.css
@@ -4,6 +4,7 @@ body.album {
      background-attachment: fixed;
      background-position: center center;
      background-size: cover;
+     padding-bottom: 200px;
  }
  
  .album-cover-art {
@@ -98,5 +99,4 @@ body.album {
          width: 80%;
          margin: auto;
      }
-    
 }
